# haifa-ai

./: .gitignore
ebook-agent/: README.md
ebook-agent/doc/: mvp-prd.md  mvp-tech-design.md
ebook-agent/ebooks/: KK三部曲(失控+科技想要什么+必然).epub
ebook-agent/src/: main.py  requirements.txt  start_qdrant.sh
ebook-agent/src/config/: settings.py  settings.yaml
ebook-agent/src/ingest/: chunker.py  embed_store.py  parse_epub.py  parse_pdf.py  scan_books.py
ebook-agent/src/llm/: genai.py
ebook-agent/src/query/: answer.py  cli.py  prompt.py  retriever.py
ebook-vocab-tool/: README.md  pyproject.toml  requirements.txt
ebook-vocab-tool/scripts/: run.sh  setup_venv.sh
ebook-vocab-tool/src/ebook_vocab/: cli.py  pipeline.py
sre-agent/: .gitignore  22.html  PRD.md  README.md  TECH-DESIGN.md  diag_load_agent.py  diag_load_agent_v2.py  evidence_schema.json  mcp_server_sre.py  optimize-sre-agent.md  pytest.ini  report_schema.json  requirements.txt  setup_venv.sh  terminal_login.py
sre-agent/archived/: audit.py  diag_load_agent_v3.py  redaction.py  report_generator.py
sre-agent/configs/: commands.yaml  policy.yaml  routing.yaml  rules.yaml  runtime.yaml
sre-agent/docs/: PRD.md  TECH-DESIGN.md  multi-and-sub-agent.md  multi-stage.md  optimize-sre-agent.md
sre-agent/example/: DEPLOY_TEST.md  README.md
sre-agent/example/java-netty-cpu-hotspot/: README.md  pom.xml
sre-agent/example/java-netty-deadlock/: README.md  (+1 more)
sre-agent/schemas/: evidence_schema.json  plan_schema.json  report_schema.json
sre-agent/scripts/: replay_suite.py  run_tests.sh
sre-agent/src/: config.py
(+81 files in other folders)
