[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook-vocab-tool"
version = "0.1.0"
description = "Offline ebook vocabulary analyzer (spaCy): lemmatize + NER + frequency exports"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
